missing api-ms-win-crt-runtime-l1-1-0-dll make sure your machine
has the latest Windows patches and/or download this:

https://www.microsoft.com/en-us/download/details.aspx?id=48145

This might also help with other hard crashes.

If this does not help, or if you see a black screen, try starting Mnemosyne
with the --qt-opengl=desktop command line argument.)

Mnemosyne 2.9 : 2022-06-20

- Added an option to reset the learning history of either the current card
  or of a number of selected cards in the card browser.
- Changed the behaviour of "Cram recently learned new cards" to also include
  cards that were learned but had not yet come up for regular review. 
- Fixed a regression where the cramming scheduler would no longer save
  data. 
- The config.py option 'start_card_browser_sorted' now defaults to 'True' for
  new users. Existing users can still edit config.py manually. 
- Try harder to reach the maximum number of cards the user wants to memorise
  at once.
- Add webserver API call to retrieve number of scheduled cards 
  (patch by gbear605).
- Allow users to add webm images (patch by gojun077).
- Make sure script access to libmnemosyne also works for study modes
  other than "Scheduled - Forgotten - New" (bug report by Eloi Torrents).
- Added a config.py option 'max_scheduled_interval_days' to put an upper 
  limit to the scheduled interval. Dangerous, use this with caution and
  at your own risk! Accidentally putting this value too low will mess up
  your schedules without an option to undo this.
- Improve Python 3.10 compatibility (bug report by Martin Brodbeck).  
- Avoid infinite error loop when converting a card to cloze type 
  (patch by Oisín).
  

Mnemosyne 2.8 : 2021-06-28

- Added an option to stop showing cards as soon as they reach a certain
  number of successful retention reps. This makes sure that your review load
  does not keep increasing over the years.
- The card browser now also shows the number of learning and review reps