@@ -9,6 +9,9 @@ This might also help with other hard crashes.
 If this does not help, or if you see a black screen, try starting Mnemosyne
 with the --qt-opengl=desktop command line argument.)
 
+- Make sure the review server also works for non-latin audio files
+  (reported by jooseef).
+
 Mnemosyne 2.9 : 2022-06-20
 
 - Added an option to reset the learning history of either the current card
